update content component width to avoid flickering when expanding/collapsing sidenav

--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -14,7 +14,7 @@ section.content{
     box-sizing: border-box;
     background-color: #fff;
     padding: 20px;
-    max-width: 870px;
+    max-width: 875px;
     margin-right: 48px;
 }
 
